kustomize/base/manifests/app-clamav.yaml
##
# Kubernetes deployment configuration for running a ClamAV daemon as an internal
# service, for use by Nextcloud's Antivirus app.
#
# With this configuration, Nextcloud can reach ClamAV on port 3310 at hostname
# "internal-clamav.NAMESPACE.svc.cluster.local" (aka "internal-clamav.NAMESPACE"
# or "internal-clamav" for short") within the cluster.
#
# @author Guy Elsmore-Paddock (guy@inveniem.com)
# @copyright Copyright (c) 2019-2022, Inveniem
# @license GNU AGPL version 3 or any later version
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clamav
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: backend-clamav
      role: backend
  template:
    metadata:
      labels:
        app: backend-clamav
        role: backend
    spec:
      containers:
        - name: backend-clamav
          image: "mkodockx/docker-clamav:latest"
          ports:
            - containerPort: 3310
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 1536Mi
---
apiVersion: v1
kind: Service
metadata:
  name: internal-clamav
  labels:
    role: internal-service
spec:
  ports:
    - name: clamav
      protocol: TCP
      port: 3310
  selector:
    app: clamav
